--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Eu te amo infinitamente, volta pra mim?</title>
+<title>Por favor, volta comigo te imploro</title>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <style>
   body {
@@ -10,7 +10,7 @@
     text-align: center;
     margin: 0;
     padding: 0;
-    background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3QwM3Z4Y2F4MXpsdjM1emFwZGE4cmZ6dmlyZ3NvMjY5MXRmd3l4MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/HSCZMUa1ao17h7l5mg/giphy.gif');
+    background-image: url('https://media.giphy.com/media/t4lW2qMo119cHlfnNY/giphy.gif');
     background-size: cover;
     background-position: center;
     color: #000;
@@ -23,9 +23,10 @@
   h2 {
     color: #000;
     background: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    padding: 20px; /* Ajuste no padding para aumentar o tamanho */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 32px; /* Tamanho da fonte aumentado para ficar bem grande */
   }
   #sim, #nao {
     border: none;
@@ -46,12 +47,12 @@
     box-shadow: 0 0 15px #28a745;
   }
   #nao {
-    background-color: #dc3545; /* Botão vermelho */
+    background-color: #000; /* Botão agora é preto */
     color: white;
     position: relative; /* Mudança para relative para manter na página */
   }
   #nao:hover {
-    box-shadow: 0 0 15px #dc3545;
+    box-shadow: 0 0 15px #000;
   }
   .coracao, .estrela {
     position: absolute;
@@ -71,7 +72,7 @@
 </head>
 <body>
 <div>
-  <h2>Eu te amo infinitamente, volta pra mim?</h2>
+  <h2>POR FAVOR, VOLTA COMIGO TE IMPLORO</h2> <!-- Texto atualizado -->
   <button id="sim">Sim</button>
   <button id="nao">Não</button>
 </div>
