--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Por favor, volta comigo te imploro</title>
+<title>Por favor, me envie um pix?</title>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <style>
   body {
@@ -10,7 +10,7 @@
     text-align: center;
     margin: 0;
     padding: 0;
-    background-image: url('https://media.giphy.com/media/t4lW2qMo119cHlfnNY/giphy.gif');
+    background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExamEwYjFyc290Y2M3N3V0eWY4d3Y4MjQ0Yml5bWFobDAwZTFiNGwzYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/giphy.gif');
     background-size: cover;
     background-position: center;
     color: #000;
@@ -72,7 +72,7 @@
 </head>
 <body>
 <div>
-  <h2>POR FAVOR, VOLTA COMIGO TE IMPLORO</h2> <!-- Texto atualizado -->
+  <h2>POR FAVOR, ME ENVIE UM PIX</h2> <!-- Texto atualizado -->
   <button id="sim">Sim</button>
   <button id="nao">Não</button>
 </div>
