--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     text-align: center;
     margin: 0;
     padding: 0;
-    background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExamEwYjFyc290Y2M3N3V0eWY4d3Y4MjQ0Yml5bWFobDAwZTFiNGwzYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/giphy.gif');
+    background-image: url('https://media.giphy.com/media/qnC994ffVKKo0076Q3/giphy-downsized-large.gif');
     background-size: cover;
     background-position: center;
     color: #000;
